versioned_docs/version-1.0.0/curate-and-share/select-data-repository.md
---
sidebar_position: 11
title: Select a destination repository
---

## Background

To make your data FAIR, you are are required to select a destination repository for your data. Within this feature of FAIRshare you can select a repository from the list of repositories that are available to you. This will be where your data will be uploaded to and made available to the public. By completing this step, you will be able to reveive a DOI for your dataset that will be citable by other researchers.

## How to

- Select a repository from the list provided.
- Click on the `Continue` button to move to the next step.

:::info
Only `Zenodo` is supported at this time. We will be adding support for other data repositories in the future. View the roadmap to see what is in the pipeline. You can let us know if there is a specific repository you would like to see supported.
:::

![](./images/selectDestinationRepo.png)

import PageFeedback from "@site/src/components/PageFeedback";

<PageFeedback />
